
    Marill:
        HP: 70->75
        Atk: 20->40
        Def: 50->60
        SpA: 20->40
        SpD: 50->60

    Azumarill:
        Atk: 50->60
        Spe: 50->60

    Sunflora:
        Learns Morning Sun by level up

    Gligar/Gliscor:
        Learn Crunch and Psychic Fangs by TM (Teal Mask addition)
        Learn Dual Wingbeat and Lunge by move tutor (Teal Mask addition)

    Granbull (not in main game):
        Hidden Ability: Rattled->Strong Jaw

    Qwilfish/Hisuian Qwilfish/Overqwil (not in main game):
        Learns Poison Tail by level up

    Heracross:
        Learns X-Scissor by TM
        Catch rate: 45->90

    Slugma:
        Now evolves at level 32

    Magcargo:
        Learns Body Press by TM
        Learns Power Gem by TM (Teal Mask addition)

    Delibird (not in main game):
        Atk: 55->75
        Hidden Ability: Insomnia->Technician
        Learns Ice Punch by level up

    Lugia:
        Learns Brave Bird by level up

    Treecko/Torchic/Mudkip:
        Swapped level 3 and 6 moves to make first rival battle easier

    Sceptile:
        Learns Leaf Blade upon evolving

    Blaziken:
        Learns Blaze Kick upon evolving

    Mightyena:
        Learns Psychic Fangs by TM (Teal Mask addition)

    Wurmple:
        Learns Bug Bite at level 7 instead of 15
        Evolution is based on time of day

    Beautifly:
        Learns Air Slash by TM

    Dustox:
        Sp. Def: 90->100 to match Beautifly's stat increase

    Breloom:
        Learns Drain Punch by level up

    Slaking:
        Learns Giga Impact by level up

    Nincada/Ninjask/Shedinja:
        Learn Leech Life by level up

    Whismur/Loudred/Exploud:
        Received Punk Rock as a second ability
        Learn Disarming Voice by level up

    Makuhita:
        Catch rate: 180->220

    Hariyama:
        Learns Drain Punch by TM (Scarlet/Violet addition)

    Nosepass/Probopass:
        Learn Body Press by level up

    Delcatty:
        Gets Swift via level up
